--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,12 @@ dependencies {
     // LeakCanary
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+
+    // Location play services
+    implementation 'com.google.android.gms:play-services-location:11.0.0'
+
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
 
 def getProps(String propName) {
