--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,12 @@ dependencies {
 
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+
+    // CardView
+    implementation 'com.android.support:cardview-v7:26.1.0'
+
+    // Picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 def getProps(String propName) {
