Implemented map and ui switching

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        manifestPlaceholders = [mapsApiKey: getLocalPropertyString("api.key")]
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "API_KEY", getProps("api.key")
+            buildConfigField "String", "API_KEY", getLocalPropertyString("api.key")
         }
         debug {
-            buildConfigField "String", "API_KEY", "\"AIzaSyBy99dXIvxlKKydeibcTn-tSnUpaTLUbXw\""
+            buildConfigField "String", "API_KEY", getLocalPropertyString("api.key")
         }
     }
 }
@@ -35,12 +37,24 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    // Design
+    implementation 'com.android.support:design:26.1.0'
+
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
+    // CardView
+    implementation 'com.android.support:cardview-v7:26.1.0'
+
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // Android Architecture Components
     // ViewModel and LiveData
@@ -72,25 +86,17 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
     releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
 
-    // Location play services
-    implementation 'com.google.android.gms:play-services-location:11.0.0'
-
-    // RecyclerView
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-
-    // CardView
-    implementation 'com.android.support:cardview-v7:26.1.0'
-
-    // Picasso
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    // Play services
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
 }
 
-def getProps(String propName) {
+def getLocalPropertyString(String propName) {
     def propsFile = rootProject.file('local.properties')
     if (propsFile.exists()) {
         def props = new Properties()
         props.load(new FileInputStream(propsFile))
-        return props[propName]
+        return "\"${props[propName]}\""
     } else {
         return "";
     }
